objects/Food__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Amount of product</description>
        <label>Amount</label>
        <precision>13</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Animal__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Animal</label>
        <referenceTo>Animal__c</referenceTo>
        <relationshipLabel>Food</relationshipLabel>
        <relationshipName>Food</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Food</relationshipLabel>
        <relationshipName>Food</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Food</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Food Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Food</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Product_is_not_blank</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Product__c )</errorConditionFormula>
        <errorDisplayField>Product__c</errorDisplayField>
        <errorMessage>Set product</errorMessage>
    </validationRules>
</CustomObject>